Closed
Bug 658239
Opened 15 years ago
Closed 15 years ago
Add a missing storeDouble implementation for ARM to fix TI build.
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jbramley, Assigned: jbramley)
Details
Attachments
(1 file)
|
9.24 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
The TI branch is burning again, because the ARM back end is missing an overloaded variant of storeDouble. The attached patch adds the missing functionality.
Note that because this branch already fails many tests on ARM, the implementation is basically untested, though the tricky bits were tested independently.
I also added a similar loadDouble variant. It isn't currently used, but it's present in the x86 back-end and it was trivial to add to ARM since storeDouble and loadDouble use the same back-end method.
Attachment #533617 -
Flags: review?(bhackett1024)
Comment 1•15 years ago
|
||
Comment on attachment 533617 [details] [diff] [review]
Add missing storeDouble/loadDouble implementations to the ARM back-end.
Where/how are tests failing on ARM? (Only the builds show up on tinderbox).
Attachment #533617 -
Flags: review?(bhackett1024) → review+
| Assignee | ||
Comment 2•15 years ago
|
||
(In reply to comment #1)
> Where/how are tests failing on ARM? (Only the builds show up on tinderbox).
I saw around 40-50 failures a few days ago, but now I just see a
handful:
harmony-jacob-0:~/moz/jm.d$ jit-test --jitflags=j
/work/moz/jm/js/src/jit-test ~/moz/jm.d
python jit_test.py /home/jacbra01/moz/jm.d/js --jitflags=j
[1353| 4|1357] 100% ===============================================>| 126.2s
FAILURES:
-j /work/moz/mozilla.org/projects/jaegermonkey/js/src/jit-test/tests/basic/arith.js
-j /work/moz/mozilla.org/projects/jaegermonkey/js/src/jit-test/tests/basic/testRegExpTest.js
-j /work/moz/mozilla.org/projects/jaegermonkey/js/src/jit-test/tests/basic/testShiftLeft.js
-j /work/moz/mozilla.org/projects/jaegermonkey/js/src/jit-test/tests/sunspider/check-date-format-tofte.js
~/moz/jm.d
The date format test always fails in my time zone so there are only
three real failures there. Using other --jitflags gives various subsets
of the above, so I think the problem is caused only in -j.
Also, I get the following error in jsapi-tests (run through "make
check"):
...
make[2]: Entering directory `/work/moz/mozilla.org/projects/jaegermonkey/objdir-jm-mobile-nightly/js/src/jsapi-tests'
../../../dist/bin/run-mozilla.sh ../../../dist/bin/jsapi-tests
../../../dist/bin/jsapi-tests: 1: Syntax error: word unexpected (expecting ")")
| Assignee | ||
Comment 3•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #2)
> I saw around 40-50 failures a few days ago, but now I just see a
> handful:
The remaining failures exist on the tracemonkey repository too, so they aren't related to type inference.
You need to log in
before you can comment on or make changes to this bug.
Description
•