[INFER] Add missing storeDouble/loadDouble implementations to the ARM back-end. [bug 658239] [r=bhackett]